# surfex-cmake

./: CMakeLists.txt  build_surfex_interfaces.sh  eggangles.F90  gen_modi.py  lfi_precision.F90  modi.cmake  readme.md  set_sources.cmake
ASSIM/: add_noise.F90  assim_dist_field.F90  assim_extrapolate_field.F90  assim_gather_field.F90  assim_gather_write_increments.F90  assim_inland_watern.F90  assim_isba_update_snow.F90  assim_isban.F90  assim_nature_isba_ekf.F90  assim_nature_isba_enkf.F90  assim_nature_isba_oi.F90  assim_naturen.F90  assim_read_field.F90  assim_sean.F90  assim_surf_atmn.F90  assim_tebn.F90  assim_townn.F90  default_assim.F90  get_iok_assim.F90  ini_assim.F90  modd_assim.F90  mode_assim_read_field_ascii.F90  mode_assim_read_field_ascllv.F90  mode_assim_read_field_fa.F90  mode_ekf.F90  mode_random.F90  modn_assim.F90  oi_acsolw.F90  oi_bc_soil_moisture.F90  oi_cacsts.F90  oi_cavegi.F90  oi_control.F90  oi_fctveg.F90  oi_jacobians.F90  oi_kalman_gain.F90  oi_latlon_conf_proj.F90  oi_tsl.F90  ol_propagate_ice.F90  outer_product.F90  read_assim_conf.F90  (+4 more)
GELATO/: gltools_temper_r.F90  lib_mpp.F90  modd_glt_const_evp.F90  modd_glt_param.F90  modd_glt_vhd.F90  modd_types_glt.F90  mode_glt_dia_ar5.F90  mode_glt_dia_glt.F90  mode_glt_dia_lu.F90  mode_glt_info.F90  mode_glt_info_r.F90  mode_glt_init.F90  mode_glt_nemo_bound.F90  mode_glt_stats.F90  mode_glt_stats_r.F90  mode_gltools_enthalpy.F90  mode_gltools_interp.F90  mode_gltools_prtrarr.F90  mode_gltools_sigma.F90  mode_gltools_swfrzt.F90  mode_gltools_wrivais.F90  modi_glt_blowsn_r.F90  modi_glt_constrain_r.F90  modi_glt_frzvtp_r.F90  modi_glt_gelato.F90  modi_glt_getatmf.F90  modi_glt_getmlrf.F90  modi_glt_icetrans_r.F90  modi_glt_icevsp_r.F90  modi_glt_inibud.F90  modi_glt_invert.F90  modi_glt_lmltsi_r.F90  modi_glt_mltvtp_r.F90  modi_glt_oceflx_r.F90  modi_glt_output.F90  modi_glt_precip_r.F90  modi_glt_salflx.F90  modi_glt_salflx_r.F90  modi_glt_saltrap_r.F90  modi_glt_sndatmf.F90  (+45 more)
OFFLIN/: close_aux_io_surf_lfi.F90  close_aux_io_surf_nc.F90  close_aux_io_surf_ol.F90  close_file_lfi.F90  close_file_ol.F90  close_filein_ol.F90  close_fileout_ol.F90  close_namelist_lfi.F90  close_namelist_nc.F90  close_namelist_ol.F90  close_write_cover_tex_lfi.F90  compare_orography.F90  create_file.F90  def_var_netcdf.F90  end_io_surf_lfin.F90  end_io_surf_ncn.F90  end_io_surf_oln.F90  error_read_surf_lfi.F90  error_read_surf_nc.F90  error_read_surf_ol.F90  error_write_surf_bin.F90  error_write_surf_lfi.F90  error_write_surf_txt.F90  get_date_ol.F90  get_dimlen_netcdf.F90  get_grid_conf_isban.F90  get_interp_halo_ol.F90  get_offline_conf.F90  handle_err.F90  init_index_mpi.F90  init_io_surf_binn.F90  init_io_surf_lfin.F90  init_io_surf_ncn.F90  init_io_surf_oln.F90  init_io_surf_txtn.F90  init_outfn_flaken.F90  init_outfn_isban.F90  init_outfn_sean.F90  init_outfn_surf_atmn.F90  init_outfn_tebn.F90  (+67 more)
SURFEX/: abor1_sfx.F90  abstract_ice.F90  add_forecast_to_date_surf.F90  albedo.F90  albedo_from_nir_vis.F90  albedo_mk10.F90  albedo_rs14.F90  albedo_ta96.F90  alloc_diag_surf_atmn.F90  allocate_gr_snow.F90  allocate_physio.F90  allocate_teb_veg.F90  allocate_teb_veg_pgd.F90  apply_surf_pert.F90  arpege_stretch_a.F90  arrange_cover.F90  av_pgd.F90  av_pgd_1p.F90  av_pgd_param.F90  average1_cover.F90  average1_cti.F90  average1_ldb.F90  average1_mesh.F90  average1_orography.F90  average2_cover.F90  average2_cti.F90  average2_ldb.F90  average2_mesh.F90  average2_orography.F90  average_diag.F90  average_diag_evap_isban.F90  average_diag_isban.F90  average_diag_misc_isban.F90  average_flux.F90  average_phy.F90  average_rad.F90  average_tsurf.F90  averaged_albedo_emis_isba.F90  averaged_albedo_teb.F90  averaged_tsrad_teb.F90  (+1249 more)
TOPD/: avg_patch_wg.F90  budget_coupl_rout.F90  control_water_budget_topd.F90  coupl_topd.F90  coupling_surf_topd.F90  dg_dfto3l.F90  diag_isba_to_rout.F90  dispatch_wg.F90  flowdown.F90  init_budget_coupl_rout.F90  init_coupl_topd.F90  init_surf_topd.F90  init_topd.F90  init_topd_ol.F90  init_topd_pgd.F90  isba_to_topd.F90  isba_to_topdsat.F90  make_mask_isba_to_topd.F90  make_mask_topd_to_isba.F90  modd_topodyn.F90  pgd_topd.F90  prep_restart_coupl_topd.F90  read_connex_file.F90  read_file_isbamap.F90  read_file_masktopd.F90  read_nam_pgd_topd.F90  read_nam_topd.F90  read_namelists_topd.F90  read_slope_file.F90  read_topd_file.F90  read_topd_header_connex.F90  read_topd_header_dtm.F90  recharge_surf_topd.F90  restart_coupl_topd.F90  rout_data_isba.F90  routing.F90  sat_area_frac.F90  topd_to_df.F90  topd_to_isba.F90  topd_to_isba_slope.F90  (+7 more)
TRIP/: abort_trip.F90  alloc_trip_diag.F90  close_trip_namelist.F90  flood_redistrib.F90  flood_update.F90  get_lat_gwf.F90  get_lonlat_trip.F90  get_trip_grid_conf.F90  gw_redistrib.F90  gwf.F90  gwf_budget.F90  gwf_cpl_update.F90  gwf_int.F90  gwf_solver.F90  init_param_trip.F90  init_restart_trip.F90  init_trip.F90  init_trip_cpl_esm.F90  init_trip_diag.F90  init_trip_par.F90  modd_off_tripn.F90  modd_surfex_tripn.F90  modd_trip.F90  modd_trip_diag.F90  modd_trip_grid.F90  modd_type_diag.F90  mode_read_date_netcdf.F90  mode_rw_trip.F90  mode_trip_function.F90  mode_trip_grid.F90  mode_trip_init.F90  mode_trip_netcdf.F90  modn_trip.F90  modn_trip_run.F90  open_trip_namelist.F90  prep_trip_run.F90  read_dimlen.F90  read_forcing_date.F90  read_nam_trip.F90  read_nam_trip_grid.F90  (+35 more)
open-SURFEX/: 2  create_modi.sh  create_modi_with_splr.sh  log
